@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4UIbatch.cc,v 1.5 2001-08-28 06:01:25 asaim Exp $
+// $Id: G4UIbatch.cc,v 1.6 2001-08-29 18:47:04 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -67,7 +67,13 @@ G4UIsession * G4UIbatch::SessionStart()
       }
       if( macroFile.eof() ) break;
       commandLine[lineLength] = '\0';
-      if( commandLine[0] != '#' )
+      G4String commandString = commandLine;
+      G4String nC= commandString.strip(G4String::both);
+      if( commandLine[0] == '#' || nC.length() == 0 )
+      { G4cout << commandLine << G4endl; }
+      else if(nC == "exit")
+      { break; }
+      else
       { 
         G4int rc = UImanager->ApplyCommand(commandLine);
         if(rc)
@@ -90,8 +96,6 @@ G4UIsession * G4UIbatch::SessionStart()
           G4cerr << "***** Command ignored *****" << G4endl;
         }
       }
-      else
-      { G4cout << commandLine << G4endl; }
     }
   }
   return previousSession;
