@@ -1,4 +1,4 @@
-$Id: History,v 1.26 2001-08-28 06:01:23 asaim Exp $
+$Id: History,v 1.27 2001-08-29 18:47:03 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Aug 29, 2001, M.Asai (intercoms-V03-02-06)
+- Corrections in G4UIbatch to ignore the blank line.
 
 Aug 27, 2001, M.Asai (intercoms-V03-02-05)
 - G4UIbatch now displays (G4cerr) the error message.
